--- a/components/select/apiExamples/value.html
+++ b/components/select/apiExamples/value.html
@@ -1,7 +1,7 @@
 <auro-button id="validValueExampleBtn">Set Value to Valid Option</auro-button>
 <auro-button id="invalidValueExampleBtn">Set Value to Invalid Option</auro-button>
 <br/><br/>
-<auro-select id="valueExample" multiselect value='["price", "duration"]'>
+<auro-select id="valueExample" ondark multiselect layout="snowflake" shape="snowflake" size="lg">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <span slot="label">Name</span>
   <auro-menu>
