fix: add extra styles to bib input

--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -13,7 +13,15 @@
   }
 
   #inputInBib {
+    &::part(wrapper) {
+      box-shadow: none;
+    }
+
     &::part(accent-left) {
+      display: none;
+    }
+
+    &::part(accent-right) {
       display: none;
     }
   }
