--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -49,7 +49,20 @@
   justify-content: center;
 }
 
+slot {
+  &[name="typeIcon"] {
+    color: var(--ds-auro-counter-label-text-color);
+  }
+
+  &[name="valueText"] {
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
 label {
+  color: var(--ds-auro-counter-label-text-color);
   padding-block: var(--ds-size-25, vac.$ds-size-25);
 }
 
@@ -66,14 +79,6 @@ label {
       justify-content: center;
       gap: var(--ds-size-100, vac.$ds-size-100);
     }
-  }
-}
-
-slot {
-  &[name="valueText"] {
-    overflow-x: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 }
 
