feat: add fluid attribute to select #803

--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -138,6 +138,10 @@ label {
   display: none;
 }
 
+:host([fluid]) {
+  width: 100%;
+}
+
 :host([disabled]) {
   pointer-events: none;
   user-select: none;
