--- a/components/menu/src/styles/default/style-menuoption.scss
+++ b/components/menu/src/styles/default/style-menuoption.scss
@@ -5,7 +5,7 @@
 
 /* stylelint-disable declaration-empty-line-before */
 
-@use '@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables' as vac;
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 @use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 @use '@aurodesignsystem/webcorestylesheets/dist/bundled/type/classes.alaska.css';
 
@@ -16,15 +16,44 @@
   user-select: none;
 
   .wrapper {
-    box-sizing: border-box;
     display: flex;
     align-items: center;
-    padding-right: var(--ds-size-150, vac.$ds-size-150);
-    padding-left: calc(var(--ds-size-100, vac.$ds-size-100) + var(--ds-size-300, vac.$ds-size-300) + var(--ds-size-100, vac.$ds-size-100));
+    padding-right: var(--ds-size-200, vac.$ds-size-200);    
+    padding-left: calc(var(--ds-size-150, vac.$ds-size-150) + var(--ds-size-300, vac.$ds-size-300) + var(--ds-size-100, vac.$ds-size-100));
     padding-top: var(--ds-size-50, vac.$ds-size-50);
     padding-bottom: var(--ds-size-50, vac.$ds-size-50);
+    border-radius: var(--ds-size-100, vac.$ds-size-100);
 
     -webkit-tap-highlight-color: transparent;
+
+    &[class*="shape-box"] {
+      border-radius: unset;
+    }
+
+    &[class*="shape-snowflake"] {
+      border-radius: unset;
+      line-height: 24px;
+    }
+
+    &[class*="shape-pill"] {
+      border-radius: 30px;
+    }
+
+    &[class*="-lg"] {
+      padding-top: var(--ds-size-75, vac.$ds-size-75);
+      padding-bottom: var(--ds-size-75, vac.$ds-size-75);
+      padding-right: var(--ds-size-150, vac.$ds-size-150);
+      margin-bottom: var(--ds-size-50, vac.$ds-size-50);
+      line-height: 26px;
+    }
+
+    &[class*="-xl"] {
+      padding-top: var(--ds-size-100, vac.$ds-size-100);
+      padding-bottom: var(--ds-size-100, vac.$ds-size-100);
+      padding-right: var(--ds-size-200, vac.$ds-size-200);
+      margin-bottom: var(--ds-size-100, vac.$ds-size-100);
+      line-height: 26px;
+    }
 
   }
 
@@ -37,7 +66,7 @@
 
   [auro-icon] {
     --ds-auro-icon-size: var(--ds-size-300, #{vac.$ds-size-300});
-    margin-right: var(--ds-size-100, vac.$ds-size-100);
+    margin-right: var(--ds-size-150, vac.$ds-size-150);
     margin-left: var(--ds-size-100, vac.$ds-size-100);
   }
 
@@ -47,9 +76,15 @@
   }
 }
 
+:host(:last-child) {
+  .wrapper {
+    margin-bottom: unset;
+  }
+}
+
 :host([loadingplaceholder]) {
   .wrapper {
-    padding-left: calc(var(--ds-size-100, vac.$ds-size-100) + var(--ds-size-300, vac.$ds-size-300) + var(--ds-size-100, vac.$ds-size-100));
+    padding-left: calc(var(--ds-size-150, vac.$ds-size-150) + var(--ds-size-300, vac.$ds-size-300) + var(--ds-size-100, vac.$ds-size-100));
   }
 }
 
