fix: hide input's clear when it's not holding focus/hover #843

--- a/components/input/src/styles/style.scss
+++ b/components/input/src/styles/style.scss
@@ -58,6 +58,13 @@ input {
   }
 }
 
+.wrapper:not(:focus-within):not(:hover) { // stylelint-disable selector-not-notation
+  .notificationBtn.passwordBtn,
+  .notification.clear {
+    display: none;
+  }
+}
+
 .notification {
   display: flex;
   align-items: center;
