fix: hide datepicker's clear when it's not holding focus/hover #843

--- a/components/datepicker/src/styles/style.scss
+++ b/components/datepicker/src/styles/style.scss
@@ -71,6 +71,11 @@
   width: 100%;
 }
 
+.wrapper:not(:focus-within):not(:hover) { // stylelint-disable selector-not-notation
+  .notification.clear {
+    display: none;
+  }
+}
 
 @include vb.auro_breakpoint($max: vac.$ds-grid-breakpoint-sm) {
   ::part(popover) {
