task: establish baseline working examples of dialog, dropdown, and input behaviors

--- a/components/popover/apiExamples/basic.html
+++ b/components/popover/apiExamples/basic.html
@@ -12,6 +12,7 @@
 
 <!-- input example -->
 <auro-popover behavior="input">
+  <auro-input slot="trigger" placeholder="Click to open input popover"></auro-input>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
     <auro-menuoption value="Oranges" id="option-1">Oranges</auro-menuoption>
