--- a/components/input/src/styles/classic/style.scss
+++ b/components/input/src/styles/classic/style.scss
@@ -21,6 +21,7 @@
   .wrapper {
     display: flex;
     flex-direction: row;
+    background-color: var(--ds-auro-input-container-color);
     box-shadow: inset 0 0 0 1px var(--ds-auro-input-outline-color);
   }  
 
