--- a/components/popover/apiExamples/basic.html
+++ b/components/popover/apiExamples/basic.html
@@ -13,7 +13,7 @@
 
 <p>&nbsp;</p>
 <p>dropdown example</p>
-<auro-popover behavior="dropdown">
+<auro-popover behavior="dropdown" floatingUiConfig='{"placement": "top", "useFlip": false, "useAutoPlacement": false, "useHide": false}'>
   <button type="button" slot="trigger">Open Dropdown</button>
   <p>I am a dropdown popover. I should be positioned next to my parent element/trigger.</p>
   <input type="text" placeholder="I am an input inside a dropdown popover" />
