--- a/components/dropdown/src/styles/classic/bibStyles.scss
+++ b/components/dropdown/src/styles/classic/bibStyles.scss
@@ -13,12 +13,12 @@
 /* stylelint-disable no-descending-specificity, selector-max-attribute, selector-class-pattern, selector-max-class */
 
 
-:host {
-  position: fixed;
-  z-index: var(--depth-tooltip, #{vac.$ds-depth-tooltip});
-  display: none;
-  isolation: isolate;
-}
+// :host {
+//   position: fixed;
+//   z-index: var(--depth-tooltip, #{vac.$ds-depth-tooltip});
+//   display: none;
+//   isolation: isolate;
+// }
 
 :host(:not([matchWidth])) {
   .container {
@@ -27,7 +27,6 @@
 }
 
 :host([isfullscreen]) {
- position: fixed;
  top: 0;
  left: 0;
 
