task: better support for existing use case, better event controls, better event semantics

--- a/components/popover/apiExamples/basic.html
+++ b/components/popover/apiExamples/basic.html
@@ -1,5 +1,5 @@
 <p>existing support example</p>
-<button type="button" onclick="document.querySelector('auro-popover[behavior=dialog]').show()">Click Me For Dialog</button>
+<button type="button" onclick="document.querySelector('auro-popover[behavior=dialog]').toggle()">Click Me For Dialog</button>
 <auro-popover behavior="dialog">
   <p>I am a dialog popover. I should be positioned fixed over the top of the page.</p>
 </auro-popover>
