fix: force rerender snowflake input when it gets focus #891

--- a/components/input/src/styles/emphasized/style.scss
+++ b/components/input/src/styles/emphasized/style.scss
@@ -65,6 +65,7 @@
   }
 
   input {
+    transition: all 1ms linear; // force repaint after 0.01s due to iOS safari rendering issue
     text-align: center;
   }
 
