task: update new popover name to final 'floater' name and improve implementation of floater in dropdown a little

--- a/components/dropdown/src/styles/classic/style.scss
+++ b/components/dropdown/src/styles/classic/style.scss
@@ -29,6 +29,12 @@
     white-space: normal;
   }
 
+  auro-floater::part(popover),
+  [auro-floater]::part(popover) {
+    box-shadow: var(--ds-auro-dropdownbib-boxshadow-color);
+    border-radius: var(--ds-border-radius);
+  }
+
   .wrapper {
     display: flex;
     flex-direction: row;
