--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -34,3 +34,9 @@
     width: 100%;
   }
 }
+
+auro-floater::part(popover),
+[auro-floater]::part(popover) {
+  box-shadow: var(--ds-auro-dropdownbib-boxshadow-color);
+  border-radius: var(--ds-border-radius);
+}
