feat: add toggle method to dropdown and fix alignment bug due to browsers setting text-align on buttons

--- a/components/floater/src/styles/style.scss
+++ b/components/floater/src/styles/style.scss
@@ -7,6 +7,10 @@
 }
 
 [popovertarget] {
+  margin: 0;
   width: 100%;
+  font-size: inherit;
   text-align: inherit;
+  font: inherit;
+  line-height: inherit;
 }
