--- a/components/floater/src/styles/style.scss
+++ b/components/floater/src/styles/style.scss
@@ -14,3 +14,12 @@
   font: inherit;
   line-height: inherit;
 }
+
+:host([behavior$="-fullscreen"]) {
+  [popover] {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+}
