task: update dropdown to listen for show and change the behavior instead of using a window resize event listener

--- a/components/floater/src/styles/style.scss
+++ b/components/floater/src/styles/style.scss
@@ -6,6 +6,11 @@
   overflow: visible;
 }
 
+:host(:not([shown])) [popover] {
+  opacity: 0;
+  pointer-events: none;
+}
+
 [popovertarget] {
   margin: 0;
   width: 100%;
