--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -94,6 +94,12 @@
   }
 }
 
+:host([layout*='snowflake']) {
+  label {
+    padding-block: var(--ds-size-25, 0.125rem);
+  }
+}
+
 :host([layout*='classic']) {
   .triggerContent {
     padding: 0 var(--ds-size-100, vac.$ds-size-100);
