--- a/components/dropdown/src/styles/classic/bibStyles.scss
+++ b/components/dropdown/src/styles/classic/bibStyles.scss
@@ -12,14 +12,6 @@
 
 /* stylelint-disable no-descending-specificity, selector-max-attribute, selector-class-pattern, selector-max-class */
 
-
-:host {
-  position: fixed;
-  z-index: var(--depth-tooltip, #{vac.$ds-depth-tooltip});
-  display: none;
-  isolation: isolate;
-}
-
 :host(:not([matchWidth])) {
   .container {
       min-width: fit-content;
@@ -27,7 +19,6 @@
 }
 
 :host([isfullscreen]) {
- position: fixed;
  top: 0;
  left: 0;
 
@@ -76,12 +67,10 @@
   }
 }
 
-
 .container {
-  display: inline-block;
   overflow: auto;
-  box-sizing: border-box;
-  border-radius: var(--ds-border-radius, #{vac.$ds-border-radius});
-  margin: var(--ds-size-50, #{vac.$ds-size-50}) 0;
-}
+  max-height: 75vh;
 
+  box-shadow: var(--ds-auro-dropdownbib-boxshadow-color);
+  border-radius: var(--ds-border-radius);
+}
