fix: tab order is now correct when opening the layover multiple times

--- a/components/layover/apiExamples/basic.html
+++ b/components/layover/apiExamples/basic.html
@@ -19,6 +19,12 @@
   <input type="text" placeholder="I am an input inside a dropdown popover" />
   <textarea placeholder="I am a textarea inside a dropdown popover"></textarea>
   <button type="button" onclick="document.querySelector('auro-layover[behavior=dropdown]').hide()">Close Dropdown</button>
+  <auro-button>Auro Button Is Here</auro-button>
+  <button type="button" onclick="document.querySelector('auro-layover[behavior=dropdown]').hide()">Close Dropdown</button>
+  <input type="text" placeholder="I am an input inside a dropdown popover" />
+  <textarea placeholder="I am a textarea inside a dropdown popover"></textarea>
+  <p>Paragraph test</p>
+  <span>Span test</span>
 </auro-layover>
 
 <p>&nbsp;</p>
