fix: make dropdown `inline-block` as default and add `fluid` attr

--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -2,8 +2,16 @@
 
 :host {
   position: relative;
-  display: block;
+  display: inline-block;
   text-align: left;
+}
+
+:host([fluid]) {
+  display: block;
+
+  ::slotted([slot='trigger']) {
+    width: 100%;
+  }
 }
 
 :host([open]) {
