feat: add match-width feature to layover and implement in dropdown/dropdownbib

--- a/components/dropdown/src/styles/classic/bibStyles.scss
+++ b/components/dropdown/src/styles/classic/bibStyles.scss
@@ -18,6 +18,13 @@
   }
 }
 
+:host([matchWidth]) {
+  .container {
+      width: 100%;
+      max-width: 100%;
+  }
+}
+
 :host([isfullscreen]) {
  top: 0;
  left: 0;
