feat: add `fluid` attribute

--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -33,6 +33,10 @@
   text-align: left;
 }
 
+:host([fluid]) {
+  display: block;
+}
+
 :host([layout*='emphasized']),
 :host([layout*='snowflake']) {
   [auro-dropdown] {
