--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -11,6 +11,7 @@
 
   [auro-input] {
     --ds-auro-input-background-color: transparent;
+    --ds-auro-input-container-color: transparent;
   }
 
   #inputInBib {
