--- a/components/dropdown/src/styles/color.scss
+++ b/components/dropdown/src/styles/color.scss
@@ -22,6 +22,10 @@
       --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
       --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
     }
+
+    &:hover {
+      --ds-auro-dropdown-trigger-background-color: var(--ds-auro-dropdown-trigger-hover-background-color);
+    }
   }
 }
 
@@ -51,6 +55,10 @@
     &:active {
       --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
       --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
+    }
+    
+    &:hover {
+      --ds-auro-dropdown-trigger-background-color: var(--ds-auro-dropdown-trigger-hover-background-color);
     }
   }
 }
