docs: udpate select custom value display example

--- a/components/select/apiExamples/emphasized/constantDisplayValue.html
+++ b/components/select/apiExamples/emphasized/constantDisplayValue.html
@@ -1,4 +1,4 @@
-<auro-select layout="emphasized" shape="pill" size="xl" value="flights" ondark forceDisplayValue style="display:inline-block;">
+<auro-select layout="emphasized" shape="pill" size="xl" value="flights" forceDisplayValue style="display:inline-block;">
   <span slot="label">Select Example</span>
   <auro-menu nocheckmark>
     <auro-menuoption value="flights">
