--- a/components/datepicker/src/styles/classic/style.scss
+++ b/components/datepicker/src/styles/classic/style.scss
@@ -1,9 +1,7 @@
-/* stylelint-disable max-nesting-depth, declaration-no-important, selector-class-pattern, declaration-empty-line-before */
+/* stylelint-disable max-nesting-depth, declaration-no-important, selector-class-pattern, declaration-empty-line-before, scss/selector-nest-combinators */
 
-@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
 @use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
-@use '@aurodesignsystem/webcorestylesheets/src/breakpoints' as vb;
 @use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
 :host([layout*='classic']) {
@@ -25,7 +23,7 @@
   }
 
   [auro-input].dateTo {
-    margin-left: var(--ds-size-150, 0.75rem);
+    margin-left: var(--ds-size-150, vac.$ds-size-150);
 
     &::part(accent-left) {
       display: none;
