fix: update combobox.value only when making a selection

--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -1,6 +1,6 @@
 <!-- HTML example file -->
 <!-- ----------------- -->
-<auro-combobox id="dynamicMenuExample" noFilter>
+<auro-combobox id="dynamicMenuExample" noFilter layout="snowflake" shape="snowflake" value="GER" size="lg" ondark>
   <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
   <span slot="label">Name</span>
   <!--
