fix: remove infinite clearing in combobox

--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -1,6 +1,14 @@
 <!-- HTML example file -->
 <!-- ----------------- -->
-<auro-combobox id="dynamicMenuExample" noFilter layout="snowflake" shape="snowflake" value="GER" size="lg" ondark>
+<auro-combobox
+  id="dynamicMenuExample"
+  value="GER"
+  layout="snowflake"
+  shape="snowflake"
+  size="lg"
+  ondark
+  noFilter
+  persistInput>
   <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
   <span slot="label">Name</span>
   <!--
