--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -1,11 +1,11 @@
 <!-- HTML example file -->
 <!-- ----------------- -->
-<auro-combobox id="dynamicMenuExample" noFilter layout="snowflake" shape="snowflake" value="GER" size="lg" ondark>
+<auro-combobox id="dynamicMenuExample" noFilter layout="snowflake" shape="snowflake" value="GER" size="lg" ondark >
   <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
   <span slot="label">Name</span>
   <!--
     The auro-combobox element requires an empty auro-menu element
     due to the requirements of auro-dropdown and auro-input
   -->
-  <auro-menu id="initMenu"></auro-menu>
+  <auro-menu id="initMenu" loading></auro-menu>
 </auro-combobox>
