fix: update form.test

--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -8,7 +8,9 @@
   size="lg"
   ondark
   noFilter
-  persistInput>
+  persistInput
+  dvInputOnly
+  required>
   <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
   <span slot="label">Name</span>
   <!--
