--- a/components/input/apiExamples/snowflake/basic.html
+++ b/components/input/apiExamples/snowflake/basic.html
@@ -1,5 +1,10 @@
-<auro-input id="snowflakePill" layout="snowflake" shape="snowflake" size="lg" placeholder="Departure" style="width: 249px;" ondark required>
+<auro-input dvInputOnly value="lax" id="snowflakePill" layout="snowflake" shape="snowflake" size="lg" placeholder="Departure" style="width: 249px;" ondark required>
   <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
+  <span slot="displayValue">
+    <div>
+      <div class="subText">Los Angeles</div>
+    </div>
+  </span>
 </auro-input>
