docs: cleanup examples and extend dynamic menu example

--- a/components/input/apiExamples/emphasized/basic.html
+++ b/components/input/apiExamples/emphasized/basic.html
@@ -2,13 +2,12 @@
   <label slot="label">From</label>
 </auro-input> -->
 
-<auro-input id="alpha" value="lax" layout="emphasized" shape="box" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+<auro-input dvInputOnly id="alpha" value="lax" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
   <span slot="displayValue">
     <div>
-      <div class="mainText">LAX</div>
       <div class="subText">Los Angeles</div>
     </div>
   </span>
