--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -2,6 +2,27 @@
 <!-- ----------------- -->
 <auro-combobox
   id="dynamicMenuExample"
+  value="TAN"
+  layout="snowflake"
+  shape="snowflake"
+  size="lg"
+  ondark
+  noFilter
+  persistInput
+  dvInputOnly
+  required>
+  <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
+  <span slot="label">First</span>
+  <!--
+    The auro-combobox element requires an empty auro-menu element
+    due to the requirements of auro-dropdown and auro-input
+  -->
+  <auro-menu id="initMenu"></auro-menu>
+</auro-combobox>
+
+
+<auro-combobox
+  id="dynamicMenuExampleTwo"
   value="GER"
   layout="snowflake"
   shape="snowflake"
@@ -12,10 +33,14 @@
   dvInputOnly
   required>
   <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
-  <span slot="label">Name</span>
+  <span slot="label">Second</span>
   <!--
     The auro-combobox element requires an empty auro-menu element
     due to the requirements of auro-dropdown and auro-input
   -->
-  <auro-menu id="initMenu"></auro-menu>
+  <auro-menu id="initMenuTwo"></auro-menu>
 </auro-combobox>
+
+<auro-button id="dynamicMenuSwapButton">
+  Swap Values
+</auro-button>
