fix: remove redundant hover background color style from dropdown and ensure consistent styling in select component
Co-authored-by: Jason Baker <jason@capsule42.com>

--- a/components/select/src/styles/emphasized/color.scss
+++ b/components/select/src/styles/emphasized/color.scss
@@ -2,7 +2,7 @@
 
 // ---------------------------------------------------------------------
 
-/* stylelint-disable scss/dollar-variable-pattern, selector-class-pattern, selector-max-class */
+/* stylelint-disable scss/dollar-variable-pattern, selector-class-pattern, selector-max-class, selector-max-attribute, max-nesting-depth */
 
 @use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
 
@@ -12,6 +12,12 @@
 
     &:hover {
       --ds-auro-dropdown-trigger-hover-background-color:  var(--ds-advanced-color-dropdown-emphasized-background, #{v.$ds-advanced-color-dropdown-emphasized-background});
+    }
+
+    &[layout*="emphasized"] {
+      &::part(wrapper) {
+        --ds-auro-dropdown-trigger-background-color: var(--ds-advanced-color-dropdown-emphasized-background, #{v.$ds-advanced-color-dropdown-emphasized-background});
+      }
     }
   }
 }
