fix: fixed position the bib when open and isBibFullscreen

--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -11,6 +11,12 @@
   z-index: var(--depth-tooltip, #{vac.$ds-depth-tooltip});
 }
 
+:host([open][isbibfullscreen]) {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .wrapper {
   display: flex;
   flex: 1;
