--- a/components/menu/src/styles/default/style-menuoption.scss
+++ b/components/menu/src/styles/default/style-menuoption.scss
@@ -14,6 +14,8 @@
 :host {
   cursor: pointer;
   user-select: none;
+  text-overflow: ellipsis;
+  max-width: 100dvw;
 
   .wrapper {
     display: flex;
