docs(combobox): update doc examples based on PR feedback

--- a/components/combobox/apiExamples/externalSelection.html
+++ b/components/combobox/apiExamples/externalSelection.html
@@ -2,7 +2,7 @@
     Type 'a' in the combobox for best testing results :)
 </p>
 
-<auro-combobox id="externalSelectionExample" layout="classic" shape="classic" size="lg" placeholder="Placeholder content" required style="width: 249px;">
+<auro-combobox ondark id="externalSelectionExample" layout="classic" shape="classic" size="lg" placeholder="Placeholder content" required style="width: 249px;">
   <span slot="ariaLabel.bib.close">Close combobox</span>
   <span slot="ariaLabel.input.clear">Clear All</span>
   <span slot="bib.fullscreen.headline">Bib Header</span>
