chore: add examples for dropdown, combobox, counter, datepicker, and select components with shift property

--- a/components/counter/apiExamples/floaterConfig.html
+++ b/components/counter/apiExamples/floaterConfig.html
@@ -38,4 +38,17 @@
       <span slot="description">2-17 years</span>
     </auro-counter>
   </auro-counter-group>
+  <auro-counter-group width="350px" isDropdown offset="20" placement="bottom-start" shift noFlip>
+    <div slot="bib.fullscreen.headline">Passengers</div>
+    <span slot="label">Label</span>
+    <span slot="helpText">bottom-start with 20px offset, noFlip and shift enabled</span>
+    <auro-counter>
+      Adults
+      <span slot="description">18 years or older</span>
+    </auro-counter>
+    <auro-counter>
+      Children
+      <span slot="description">2-17 years</span>
+    </auro-counter>
+  </auro-counter-group>
 </div>
