--- a/components/datepicker/apiExamples/floaterConfig.html
+++ b/components/datepicker/apiExamples/floaterConfig.html
@@ -15,3 +15,14 @@
     <span slot="bib.fullscreen.dateLabel">Choose a date</span>
   </auro-datepicker>
 </div>
+
+<div style="width: 600px; padding-top: 1em;">
+  <p>Range bottom-start with 20px offset, noFlip and shift enabled</p>
+  <auro-datepicker range offset="20" placement="bottom-start" shift noFlip minDate="07/08/2025">
+    <span slot="ariaLabel.bib.close">Close Calendar</span>
+    <span slot="bib.fullscreen.headline">Datepicker Range Headline</span>
+    <span slot="fromLabel">Departure</span>
+    <span slot="toLabel">Return</span>
+    <span slot="bib.fullscreen.dateLabel">Roundtrip</span>
+  </auro-datepicker>
+</div>
