fix: adjust all snowflake paddings: #1109

--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -17,7 +17,7 @@
   text-align: left;
 }
 
-:host(:not([layout="classic"])) {
+:host([layout*="emphasized"]) {
   .triggerContent {
     padding: 0 var(--ds-size-100, vac.$ds-size-100) 0 var(--ds-size-300, vac.$ds-size-300);
   }
@@ -30,6 +30,10 @@
 }
 
 :host([layout="snowflake"]) {
+  .triggerContent {
+    padding: 0 var(--ds-size-100, vac.$ds-size-100) 0 var(--ds-size-200, vac.$ds-size-200);
+  }
+
   [auro-dropdown] {
     .mainContent {
       align-items: center;
