--- a/components/datepicker/apiExamples/snowflake/basic.html
+++ b/components/datepicker/apiExamples/snowflake/basic.html
@@ -1,4 +1,4 @@
-<auro-datepicker style="width: 306px" layout="snowflake" shape="snowflake" placeholder="MM/DD">
+<auro-datepicker style="width: 306px" layout="snowflake" shape="snowflake" placeholder="MM/DD/YYYY">
   <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="label">Date</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
