--- a/components/datepicker/apiExamples/snowflake/ondark.html
+++ b/components/datepicker/apiExamples/snowflake/ondark.html
@@ -1,4 +1,4 @@
-<auro-datepicker layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+<auro-datepicker layout="snowflake" shape="snowflake" ondark placeholder="MM/DD/YYYY">
   <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="label">Date</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
