feat: add host level displayValue slot #1117

--- a/components/datepicker/apiExamples/snowflake/ondark-range.html
+++ b/components/datepicker/apiExamples/snowflake/ondark-range.html
@@ -4,4 +4,5 @@
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
+  <span slot="displayValue">Aug 01–Aug 06</span>
 </auro-datepicker>
