feat: auto supply datepicker displayValue slot content #1117

--- a/components/datepicker/apiExamples/snowflake/ondark-range.html
+++ b/components/datepicker/apiExamples/snowflake/ondark-range.html
@@ -1,8 +1,7 @@
-<auro-datepicker range layout="snowflake" shape="snowflake" ondark placeholder="MM/DD/YYYY">
+<auro-datepicker range layout="snowflake" shape="snowflake" ondark placeholder="MM/DD/YYYY" dvInputOnly>
   <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="label">Dates</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
-  <span slot="displayValue">Aug 01–Aug 06</span>
 </auro-datepicker>
