fix: prevent menu from overriding user input on keydown in combobox #1129

--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -19,8 +19,7 @@
   -->
   <auro-menu id="initMenu"></auro-menu>
 </auro-combobox>
-
-
+<br>
 <auro-combobox
   id="dynamicMenuExampleTwo"
   value="GER"
@@ -40,7 +39,13 @@
   -->
   <auro-menu id="initMenuTwo"></auro-menu>
 </auro-combobox>
-
+<br>
 <auro-button id="dynamicMenuSwapButton">
   Swap Values
 </auro-button>
+
+<auro-button id="dynamicMenuPersistButton">
+  Toggle Persist Input
+</auro-button>
+
+
