fix: hide extra icon from edge browser #1139

--- a/components/input/src/styles/classic/style.scss
+++ b/components/input/src/styles/classic/style.scss
@@ -47,6 +47,10 @@
       height: auto;
       transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
     }
+
+    input[type="password"]::-ms-reveal {
+      display: none;
+    }
   }
 
   .mainContent:has(input.util_displayHiddenVisually) {
