--- a/components/input/src/styles/classic/style.scss
+++ b/components/input/src/styles/classic/style.scss
@@ -48,6 +48,7 @@
       transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
     }
 
+    // Hide default eye icon from edge brwoser
     input[type="password"]::-ms-reveal {
       display: none;
     }
