feat: hide legened element if legned slot is not being set and the required attribute is true #1143

--- a/components/radio/src/styles/auro-radio-group.scss
+++ b/components/radio/src/styles/auro-radio-group.scss
@@ -35,6 +35,10 @@ legend {
   margin-bottom: var(--ds-size-150, vac.$ds-size-150);
 }
 
+.hidden {
+  display: none;
+}
+
 [auro-helptext] {
   margin-top: var(--ds-size-150, 0.75rem);
 }
