chore: update some validation logic to clean up UX
- Skip filter check if the input is empty so the value isn't required
- Make sure filter check runs by adding check for combo box
- Move error message logic to correct place

--- a/components/combobox/apiExamples/suggestion.html
+++ b/components/combobox/apiExamples/suggestion.html
@@ -1,4 +1,4 @@
-<auro-combobox behavior="suggestion" setCustomValidityValueMissingFilter="Please select an option from the list">
+<auro-combobox behavior="suggestion">
   <span slot="ariaLabel.bib.close">Close combobox</span>
   <span slot="ariaLabel.input.clear">Clear All</span>
   <span slot="bib.fullscreen.headline">Bib Header</span>
