fix: resolve layout issue with snowflake layout when input is errored and the user hovers
- Added documentation for `persistInput`
- Included that `setCustomValidityValueMissing` must be set if required is used
- Added `setCustomValidityValueMissing` to dynamic menu example for consistency since it uses persistInput
- Updated unit tests to correctly test for `persistInput`
- Added missing "Basic" title to basic example section on index page of documentation

--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -10,6 +10,7 @@
   noFilter
   persistInput
   dvInputOnly
+  setCustomValidityValueMissing="Please select an option from the list."
   required>
   <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
   <span slot="label">First</span>
@@ -30,6 +31,7 @@
   noFilter
   persistInput
   dvInputOnly
+  setCustomValidityValueMissing="Please select an option from the list."
   required>
   <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
   <span slot="label">Second</span>
